syntax = "proto3";

option go_package = ".;dddcqrs";

package dddcqrs;

message ListArticleParam {}

message Article {
  int32  id = 1;
  string title = 2;
  string body = 3;
  string author = 4;
  string aggregate_id = 5;
}

message Articles {
  int32 page = 1;
  int32 limit = 2;
  int32 total = 3;
  repeated Article data = 4;
}

service AddService {
  rpc CreateArticle(Article) returns (Article);
  rpc ListArticle(ListArticleParam) returns (Articles);
}
