syntax = "proto3";

option go_package = ".;dddcqrs";

package dddcqrs;

message EventParam {
    string event_id = 1;
    string event_type = 2;
    string aggregate_id = 3;
    string aggregate_type = 4;
    string event_data = 5;
    string channel = 6; // an optional field
}

message ResponseParam {
    bool is_success = 1;
    string error = 2;
}

message EventsResponse {
    repeated EventParam events = 1;
}

message EventResponse {
    string event_id = 1;
    string event_type = 2;
    string aggregate_id = 3;
    string aggregate_type = 4;
    string event_data = 5;
    string channel = 6; // an optional field
}

service EventStore {
    rpc GetEvent(EventParam) returns (EventResponse) {}
    rpc CreateEvent (EventParam) returns (ResponseParam) {}
    rpc ListEvent(EventParam) returns (EventResponse) {}
}
